# FastFoodExpert-AI

./: .gitignore  Dockerfile  FrenchFriesExpert.txt  README.md  autotests.py  database.py  docker-compose.yml  hacker_bot.py  main.py  pyproject.toml  requirments.txt  shield.py  updater.py
