[project]
name = "securityforrag-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "ollama>=0.6.1",
    "requests>=2.33.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
]
